--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "A containerized streaming pipeline for ingesting various stream types and exposing them as an RTSP stream.",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./server.js",
@@ -19,12 +20,13 @@
     "cli-color": "^2.0.2",
     "debug": "^4.3.4",
     "dot-object": "^2.1.4",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "find-open-port": "^2.0.3",
     "googleapis": "^100.0.0",
     "human-readable-bytes": "^1.1.0",
     "moment": "^2.29.3",
+    "open": "^8.4.1",
     "rtsp-server": "^1.2.2",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.5.1",
